--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>
                 Rahul Thakur Sharma
             </h1>
-            <h3>Btech 3rd year student</h3>
+            <h3>Btech 3rd year student and admission no 2021BTCS105</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, maiores <hr/>dipisci repudiandae illum, amet earum doloremque<br/> officia a voluptates delectus<strong><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, eaque nihil iste dolore nesciunt accusamus dolores, minima suscipit repellat facere dolorem ipsa modi? Temporibus quo sunt fuga dolores sapiente nemo?</em></strong> sed totam ipsam enim, facere officiis dolorem necessitatibus beatae eum.</p>
             <p><span style="color:red;"> connect with me </span><a href="www.google.com">Google</a></p>
             <p><img src="https://img.freepik.com/free-photo/motolite-paper-emoji-draw_23-2148534763.jpg?size=626&ext=jpg"></p>
@@ -22,15 +22,15 @@
         <section>
             <h5>Hobbies</h5>
             <ul type="disc">
-                <li>Memes</li>
-                <li>valorant</li>
-                <li>Development (Konsi ye mat pocho)</li>
+                <li>Name</li>
+                <li>Basic</li>
+                <li>Due to boundaries</li>
             </ul>
-            <h5>Sabzi list</h5>
+            <h5>Sabzi</h5>
             <ol type="a">
-                <li>potato</li>
-                <li>tomato</li>
-                <li>onion</li>
+                <li>bohot</li>
+                <li>acchi hai</li>
+                <li>par hostel meh nhi milti</li>
             </ol>
         </section>
         <section>
@@ -42,16 +42,16 @@
                     <th>ERP</th>
                 </tr>
                 <tr>
-                    <td>Vishu Bhai</td>
-                    <td>23</td>
-                    <td>24</td>
-                    <td>25</td>
+                    <td>Ryan Broke</td>
+                    <td>73</td>
+                    <td>27</td>
+                    <td>15</td>
                 </tr>
                 <tr>
-                    <td>Abhisek</td>
-                    <td>23</td>
-                    <td>24</td>
-                    <td>25</td>
+                    <td>interow</td>
+                    <td>63</td>
+                    <td>31</td>
+                    <td>35</td>
                 </tr>
             </table>
         </section>
